# app_rkpartybox

./: CMakeLists.txt
app/: main.c  pbox_app.c  pbox_app.h  pbox_app_display.h  pbox_btsink_app.c  pbox_btsink_app.h  pbox_common.c  pbox_common.h  pbox_display_app.c  pbox_display_app.h  pbox_hotplug.c  pbox_hotplug.h  pbox_hotplug_app.c  pbox_keyadcSara.c  pbox_keyadcSara.h  pbox_keyadcSara_app.c  pbox_keyadcSara_app.h  pbox_keyscan.c  pbox_keyscan.h  pbox_keyscan_app.c  pbox_keyscan_app.h  pbox_led_app.c  pbox_led_app.h  pbox_led_cjson.c  pbox_led_cjson.h  pbox_ledctrl.c  pbox_ledctrl.h  pbox_light_effect.c  pbox_light_effect.h  pbox_light_effect_app.c  pbox_light_effect_app.h  pbox_lvgl.c  pbox_lvgl.h  pbox_lvgl_app.c  pbox_lvgl_app.h  pbox_model.h  pbox_multi_display.c  pbox_multi_display.h  pbox_multi_echo.c  pbox_multi_echo.h  (+29 more)
app/music_ui/: README.md  lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_main.c  lv_demo_music_main.h
app/music_ui/lvgl/: evdev.c  evdev.h  hal_drm.c  lv_port_indev.c
app/uac/: uac_control.c  uac_control.h  uac_uevent.c
bins/: .usb_config  Mono.pcm  S40-rkpartybox  S99-rkpartybox  Sense.pcm  Split_off.pcm  Split_on.pcm  Stereo.pcm  Widen.pcm  asound.conf  config_3a.json  config_gender_detect.json  config_howling.json  config_howling_evb.json  config_howling_vendor.json  config_reverb_doa_detect.json  inputkey  led_effect.json  partybox_app.sh  partybox_app_evb.sh  partybox_app_vendor.sh  partybox_play.sh  pbox-factory.ini
driver/storage/: param.c
driver/userial/: userial_vendor.c  userial_vendor.h
hal/: board.h  board_B2317.h  board_audio_evb.h  board_audio_vendor.h  hal_hw.c  hal_hw.h  hal_input.c  hal_input.h
hal/include/: hal_partybox.h
hal/rockchip_coreboard/: board_audio_hw.h
hal/rockchip_evb/: board_audio_hw.h
include/: RkBtBase.h  rc_comm_partybox.h  rc_partybox.h  rc_rkstudio_vendor.h  rk_comm_aio.h  rk_comm_karaoke.h  rk_defines.h  rk_mpi_amix.h  rk_mpi_karaoke.h  rk_mpi_mb.h  rkstudio_tuning.h
interface/: pbox_interface.c  pbox_interface.h
lib64/: libavcodec.so.58  libavformat.so.58  libavutil.so.56  libgmp.so.10  libswresample.so.3
modules/audio/: alsa_pcm.c  alsa_pcm.h
modules/os/: os_file.h  os_task.c  os_task.h
modules/os/include/: os_minor_type.h
modules/os/linux/: os_task.c  os_task.h  os_utils.c
modules/uac/: uac_common_def.h  uac_uevent.c  uac_uevent.h
modules/userial/: userial_vendor.c  userial_vendor.h
test/: inputkey.c
utils/: slog.c  slog.h
utils/log/: slog.c  slog.h
